# ai-manager

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  README_PERFORMANCE.md  generate_icons.py  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  说明.md
.github/workflows/: ci.yml  cross-platform.yml  new-release.yml  quality-check.yml  release.yml  update-server.yml
.shrimp/: tasks.json
ai-tools-client/: vite.config.ts
ai-tools-client/src-tauri/: Cargo.toml  tauri.conf.json
ai-tools-client/src-tauri/src/: database.rs  main.rs
ai-tools-client/src-tauri/src/commands/: config.rs  mcp_template.rs  mod.rs  mode.rs  supplier.rs
ai-tools-client/src-tauri/src/models/: config.rs  mcp_template.rs  mode.rs  supplier.rs
ai-tools-client/src-tauri/src/services/: database.rs  file_ops.rs  platform.rs
ai-tools-client/src/router/: index.ts
ai-tools-client/src/services/: configFileManager.ts  configTemplateEngine.ts  mcpTemplateApi.ts  modeApi.ts  supplierApi.ts
ai-tools-client/src/stores/: mode.ts
ai-tools-client/src/types/: api.ts  config.ts  index.ts  mode.ts  tauri.ts
ai-tools-client/src/utils/: tauriHelper.ts
ai-tools-client/src/views/: ConfigManager.vue  DashboardView.vue  ModeManager.vue
ai-tools/src-tauri/src/services/: builtin_templates.rs
docs/: 1108设计.md  code-quality-optimization-summary.md  compilation-errors-analysis.md  error-fixing-progress.md  installation-guide.md  migration-plan.md  troubleshooting.md  user-manual.md
docs/icons_temp/: README.md
resources/agent-guides/: AGENTS-and.md  AGENTS-only.md  CLAUDE-and.md  CLAUDE-only.md
scripts/: fix-api-errors.sh  run-performance-tests.js
src/: App.css  App.tsx  index.css
src-tauri/: .env.example  Cargo.toml  ai_manager.db-shm  ai_manager.db-wal  build.rs  clippy.toml  rustfmt.toml  tauri.conf.json  update-config.json
src-tauri/benches/: api_performance.rs  crypto_performance.rs  database_performance.rs
src-tauri/migrations/: 20251114072449_init.sql  20251114072610_create_indexes.sql
src-tauri/scripts/: build.bat  build.sh  check-quality.sh
src-tauri/src/: common_validators.rs  crypto.rs  database.rs  lib.rs  logging.rs  logging_manager.rs  main.rs  migration_tool.rs  models.rs  performance.rs  python_compatibility_test.rs  simple_migration.rs  startup_optimizer.rs  test_deps.rs
src-tauri/src/api/: error.rs  middleware.rs  mod.rs  responses.rs  server.rs
src-tauri/src/api/handlers/: agent.rs  agent_guide.rs  ai_manager.db-shm  ai_manager.db-wal  claude.rs  claude_old.rs  codex.rs  common_config.rs  config.rs  mcp.rs  mcp_server.rs  mod.rs
src-tauri/src/migration/: data_migrator.rs  mod.rs
src-tauri/src/repositories/: agent_guide_repository.rs  base_repository.rs  claude_provider_repository.rs  codex_provider_repository.rs  common_config_repository.rs  mcp_server_repository.rs  mod.rs
src-tauri/src/services/: claude_service.rs  codex_service.rs  mod.rs
src-tauri/src/utils/: config_utils.rs  crypto_utils.rs  date_time.rs  mod.rs  string_utils.rs  validation.rs  validators.rs
src-tauri/tests/: agent_guide_api_test.rs  api_integration.rs  claude_provider_api_test.rs  code_quality_test.rs  codex_provider_api_test.rs  common_config_api_test.rs  config_generation_test.rs  cross_platform_basic_test.rs  crypto_compatibility.rs  data_compatibility_runner.rs  data_integrity_validator.rs  encryption_compatibility_test.rs  logging_test.rs  mcp_server_api_test.rs  middleware_test.rs  migration_compatibility_test.rs  migration_test.rs  migration_test_config.rs  mod.rs  performance_validation_test.rs  simple_encryption_test.rs
src/components/common/: Button.tsx  Card.tsx  ErrorBoundary.tsx  Input.tsx  LoadingIndicator.tsx  Modal.tsx  Table.tsx  index.ts
src/components/layout/: Layout.tsx
src/hooks/: useKeyboardShortcuts.ts  useKeyboardShortcuts.tsx
src/pages/: AgentGuides.tsx  ClaudeProviders.tsx  CodexProviders.tsx  CommonConfigs.tsx  Dashboard.tsx  MCPServers.tsx  Settings.tsx
src/services/: api.ts  index.ts
src/stores/: index.ts
src/types/: index.ts
tests/: cross_platform_basic.rs  data_compatibility_test.rs  encryption_compatibility_test.rs  migration_test_runner.rs  run_cross_platform_tests.rs  run_migration_tests.cjs
tests/cross-platform/: mod.rs
tests/data/: migration_validator.py  python_encrypted_sample.json  python_original_sample.json  run_migration_tests.js
tests/e2e/performance/: startup.test.js
tests/frontend/: README.md  jest.config.js  jest.setup.js
tests/frontend/integration/: workflows.test.tsx
tests/frontend/mocks/: handlers.ts  server.ts
tests/frontend/pages/: ClaudeProviders.test.tsx  CodexProviders.test.tsx
tests/frontend/utils/: testRunner.ts  testUtils.tsx
tests/integration/cross-platform/: config_locations.rs  file_paths.rs  functional_consistency.rs
tests/performance/: api_response.test.js  memory.test.js
tests/unit/: simple_config_test.rs
tests/unit/data/: create_test_data.py  migration_validator.py  python_encrypted_sample.json  python_original_sample.json  rust_encryption_test.rs
