[package]
name = "migration-ai-manager"
version = "0.1.0"
description = "AI Manager - 从 Python/FastAPI 迁移到 Rust/Tauri"
authors = ["AI Migration Team"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "migration-ai-manager"
path = "src/main.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[[bin]]
name = "data_compatibility_test"
path = "tests/bin/data_compatibility_test.rs"

[lib]
name = "migration_ai_manager_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["fs-create-dir", "fs-exists", "fs-read-file", "fs-remove-dir", "fs-remove-file", "fs-rename-file", "fs-write-file", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
fernet = "0.2"
handlebars = "5.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.0"

# API框架依赖
axum = "0.7"
# tower = "0.4"
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
tempfile = "3.0"
serial_test = "2.0"

# 性能基准测试依赖
criterion = { version = "0.5", features = ["html_reports"] }
futures = "0.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bench]]
name = "api_performance"
harness = false

[[bench]]
name = "database_performance"
harness = false

[[bench]]
name = "crypto_performance"
harness = false