[package]
name = "migration-ai-manager"
version = "0.1.0"
description = "AI Manager - 从 Python/FastAPI 迁移到 Rust/Tauri"
authors = ["AI Migration Team"]
license = "MIT"
repository = "https://github.com/ai-manager/migration"
edition = "2021"
default-run = "migration-ai-manager"

# 优化发布构建
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = false
opt-level = "z"
debug = false
overflow-checks = false

# 为发布构建进一步优化
[profile.release.package."*"]
opt-level = "z"

# 构建时优化
[profile.dev]
opt-level = 1
debug = true
overflow-checks = false

[[bin]]
name = "migration-ai-manager"
path = "src/main.rs"

[[bin]]
name = "api_server"
path = "src/bin/api_server.rs"

[[bin]]
name = "data_compatibility_test"
path = "tests/bin/data_compatibility_test.rs"

[lib]
name = "migration_ai_manager_lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["rustls-tls"] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
tokio = { version = "1", features = ["full"] }
fernet = "0.2"
handlebars = "5.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
tempfile = "3.0"
anyhow = "1.0"

# API框架依赖
axum = "0.7"
# tower = "0.4"
tower = { version = "0.4", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.21"
futures = "0.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"
tempfile = "3.0"
serial_test = "2.0"

# 性能基准测试依赖
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures = "0.3"

# 跨平台测试依赖
dirs = "5.0"
toml = "0.8"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde", "clock"] }
rand = "0.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bench]]
name = "api_performance"
harness = false

[[bench]]
name = "database_performance"
harness = false

[[bench]]
name = "crypto_performance"
harness = false
